style.css
body,
html {
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
    font-family: 'Comfortaa', serif;
    font-weight: bold;
    color: #f5f5f5;
    background: rgb(0, 0, 0);
    scroll-behavior: smooth;
}

#loading {
    width: 100vw;
    height: 100vh;
    position: fixed;
    background: #000;
    z-index: 999;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

#spinner {
    animation: rotate 0.56s infinite linear;
    width: 60px;
    height: 60px;
    border: 6px solid #fff;
    border-bottom: 6px solid #000;
    border-radius: 50%;
    margin: 0;
}

/* Spinner rotation */
@keyframes rotate {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

#head {
    width: 80%;
    padding: 4% 10%;
    text-align: center;
    position: absolute;
    transition: 0.6s ease-in-out;
}

#head div {
    display: block;
}

#title {
    font-size: 6rem;
}

#links {
    display: flex;
    align-items: center;
    transition: 0.6s ease-in-out;
    font-size: 1.75rem;
    color: #f5f5f5;
}

#links a {
    margin: 0px 30px;
    color: inherit;
    text-decoration: none;
    transition: 0.4s ease-in-out;
    padding: 5px 8px;
    border-bottom: 2px solid transparent;
}

#links a:hover {
    border-bottom: 2px solid #f5f5f5;
}

#middle {
    width: 100%;
    height: 80vh;
    background: linear-gradient(0deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), url("./assets/img/background.jpg") center center fixed;
    background-size: 100% auto;
    background-repeat: no-repeat;
    color: #f5f5f5;
    display: flex;
    justify-content: center;
    flex-direction: column;
    transition: 1s ease-in-out;
    padding-top: 20vh;
}

#tagline-container  {
    margin-top: 200px;
    width: 60%;
}

#tagline {
    font-size: 3rem;

}

#tagline-copy {
    width: 60%;
    line-height: 1.5;
}

#button-container {
    margin-top: 50px;
}

#portfolio {
    width: 80%;
    padding: 2% 10%
}

#portfolio div h3 {
    font-size: 2.5rem;
    color: #f5f5f5;
    font-family: 'Comfortaa', cursive;
    border-bottom: 1px solid #7e7d7d;
}

.p-copy {
    font-size: 1rem;
    line-height: 1.5;
}

#skills {
    margin: 4vh 0px !important;
    padding: 2vh 0px !important;
}

#tech-container {
    display: flex;
    justify-content: space-between;
}

i {
    font-size: 5rem;
}

#work {
    margin: 4vh 0px !important;
    padding: 2vh 0px !important;
}

#work div h4 {
    font-size: 1.5rem;
}

#contact {
    margin: 4vh 0px !important;
    padding: 2vh 0px !important;
}

.btn-one {
    color: #f5f5f5;
    padding: 10px 40px;
    border-radius: 50px;
    border: 2px solid #f5f5f5;
    font-size: 18px;
    font-family: 'Comfortaa', cursive;
    font-weight: bold;
    background: transparent;
    transition: 0.6s ease-in-out;
    margin: 30px 10px;
    text-decoration: none;
}

.btn-one:hover {
    background: #f5f5f5;
    cursor: pointer;
    color: #000;
}

.btn-two {
    color: #000;
    padding: 10px 40px;
    border-radius: 50px;
    border: 2px solid #f5f5f5;
    font-size: 18px;
    font-family: 'Comfortaa', cursive;
    font-weight: bold;
    background: #f5f5f5;
    transition: 0.6s ease-in-out;
    margin: 30px 10px;
}

.btn-two:hover {
    background: transparent;
    cursor: pointer;
    color: #f5f5f5;
}

#details {
    margin: 6vh 0px;
}

#footer {
    width: 100%;
    padding: 10vh 0px;
    text-align: center;
    font-weight: bold;
}

#footer a {
    font-size: 18px;
    background-image: linear-gradient(to left, #FF416C 0%, #FF4B2B 100%);
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    background-size: 500% 500% !important;
    -webkit-animation: Gradient 20s ease infinite;
    -moz-animation: Gradient 20s ease infinite;
    -o-animation: Gradient 20s ease infinite;
    animation: Gradient 20s ease infinite;
    font-family: 'Comfortaa', cursive;
    text-decoration: none;
}

button:focus {
    outline: none;
}

::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

::-webkit-scrollbar-track {
    background: #f1f1f1;
}

::-webkit-scrollbar-thumb {
    background: #000;
}

::-webkit-scrollbar-thumb:hover {
    background: #555;
}

@-webkit-keyframes Gradient {
    0% {
        background-position: 0% 50%
    }

    50% {
        background-position: 100% 50%
    }

    100% {
        background-position: 0% 50%
    }
}

@-moz-keyframes Gradient {
    0% {
        background-position: 0% 50%
    }

    50% {
        background-position: 100% 50%
    }

    100% {
        background-position: 0% 50%
    }
}

@keyframes Gradient {
    0% {
        background-position: 0% 50%
    }

    50% {
        background-position: 100% 50%
    }

    100% {
        background-position: 0% 50%
    }
}

#footer {
    width: 100%;
    padding: 10vh 0px;
    text-align: center;
    font-weight: bold;
    font-family: 'Roboto Mono', monospace;
}

button:focus {
    outline: none;
}

::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

::-webkit-scrollbar-track {
    background: #f1f1f1;
}

::-webkit-scrollbar-thumb {
    background: #000;
}

::-webkit-scrollbar-thumb:hover {
    background: #555;
}

@-webkit-keyframes Gradient {
    0% {
        background-position: 0% 50%
    }

    50% {
        background-position: 100% 50%
    }

    100% {
        background-position: 0% 50%
    }
}

@-moz-keyframes Gradient {
    0% {
        background-position: 0% 50%
    }

    50% {
        background-position: 100% 50%
    }

    100% {
        background-position: 0% 50%
    }
}

@keyframes Gradient {
    0% {
        background-position: 0% 50%
    }

    50% {
        background-position: 100% 50%
    }

    100% {
        background-position: 0% 50%
    }
}

/* Media queries */
@media (max-width: 900px) {
    #head {
        width: 94%;
        padding: 15% 3%;
    }

    #title {
        font-size: 6rem;
    }

    #links {
        display: flex;
        justify-content: center;
        font-size: 1.5rem;
        line-height: 2;
    }

    #middle {
        width: 100%;
        background-size: cover;
    }

    #tagline-container {
        margin-top: 300px;
    }

    #tagline {
        display: flex;
        justify-content: center;
        font-size: 1.75rem;
    }

    #tech-container i {
        font-size: 2.5rem;
    }

    .btn-one {
        font-size: 14px;
        padding: 8px 20px;
    }

    .btn-two {
        font-size: 14px;
        padding: 8px 20px;
    }

    #contact {
        width: 92%;
    }

    .btn-social {
        font-size: 14px;
        margin: 10px;
        padding: 10px 11px;
    }
}

/* Media queries smaller screens */

@media (max-width: 375px) {
    #title {
        font-size: 3.5rem;
    }

    #links {
        font-size: 1.5rem;
        display: flex;
        justify-content: center;
    }

    #tagline {
        justify-content: center;
    }
}

